# PDFScout

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  20260530-implementation_plan.md  20260530-proejct_overview_plan.md  20260530-project_overview_plan.md  API_README.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  api.py  main.py  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: create-historical-releases.yml  docs.yml  release.yml
docs/: design_innovations.md  e2e_flow_and_innovations.md  index.md  real_doc_workflow.md
docs/01-getting-started/: 01-installation.md  02-usage.md  README.md
docs/02-concepts/: 01-architecture.md  02-output-format.md  03-design-innovations.md  README.md
docs/03-reference/: 01-configuration.md  README.md
docs/04-contributing/: 01-development.md  02-testing.md  03-real-doc-workflow.md  README.md
docs/javascripts/: external-links.js  section-numbering.js
docs/stylesheets/: external-links.css
plans/: 20260530_0925-implementation_plan.md  20260530_1523-claude-pdf-chat-migration.md  20260530_1603-bug-fixes.md  20260530_2026-langfuse-integration.md  20260530_2110-project_overview_plan.md  20260530_2112-fastapi-interface.md  20260531_0436-unit-integration-tests.md  20260531_ruff-makefile.md  20260531_unit-integration-tests.md  20260602_1559-synthetic-pdf-test-fixtures.md  20260602_1700-synthetic-pdf-test-fixtures.md  20260603_0850-bbox-coordinate-reliability.md  20260603_1015-is-continued-e3.md  20260603_1409-d-metadata-phase2.md  20260603_1445-meta-development-roadmap.md  20260603_1500-bbox-coordinate-reliability.md  20260603_1502-meta-development-roadmap.md  20260603_1540-real-doc-test-corpus.md  20260603_1600-is-continued-e3.md  20260603_1800-test-corpus-expansion.md  20260604_0739-real-doc-infrastructure.md  20260608_1130-merge-classifier-into-pioneer.md  20260615_2020-contract-schema-b1.md  20260616_0515-confidence-scores-b2.md  20260713_0214-reading-order-banding.md  20260713_0354-reading-order-band-splits.md
schemas/: README.md  baseline_core.json  contract.json  invoice.json  scientific_paper.json
scripts/: download_real_fixtures.py  evaluate_real_docs.py  generate_real_ground_truth.py
src/: config.py  edges.py  graph.py  schema_registry.py  state.py
src/api/: jobs.py  models.py  runner.py
src/extractors/: base.py  page_counter.py  plumber_engine.py
src/nodes/: classifier_node.py  coverage_node.py  extractor_node.py  hierarchy_node.py  retry_node.py  worker_node.py
src/utils/: pdf_utils.py  tracing.py  usage.py
tests/: conftest.py
tests/fixtures/: _golden.py  manifest.json  real_manifest.json
tests/integration/: _compare.py  conftest.py  test_api_extract.py  test_api_health.py  test_api_jobs.py  test_api_runner.py  test_full_chain.py  test_graph_pipeline.py  test_real_docs.py  test_synthetic_grp_a.py  test_synthetic_grp_b.py  test_synthetic_grp_c.py  test_synthetic_grp_d.py  test_synthetic_grp_e.py  test_synthetic_grp_f.py  test_synthetic_grp_g.py  test_synthetic_grp_h.py  test_synthetic_grp_i.py
tests/unit/: test_edges.py  test_golden_meta.py  test_graph.py  test_ground_truth_generator.py  test_models.py  test_page_counter.py  test_pdf_utils.py  test_state.py  (+3 more)
(+58 files in other folders)
