[project]
name = "pdfscout"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "anthropic>=0.105.2",
    "jsonschema>=4.26.0",
    "tenacity>=9.1.4",
    "pypdf>=6.0.0",
    "python-dotenv>=1.2.2",
    "langfuse>=4.0.0",
    "langchain>=1.3.2",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.29",
]
