[project]
name = "pdfscout"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "anthropic>=0.105.2",
    "jsonschema>=4.26.0",
    "tenacity>=9.1.4",
    "pypdf>=6.0.0",
    "python-dotenv>=1.2.2",
    "langfuse>=4.0.0",
    "langchain>=1.3.2",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
