[project]
name = "pdfscout"
version = "1.4.1"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "anthropic>=0.105.2",
    "jsonschema>=4.26.0",
    "tenacity>=9.1.4",
    "pypdf>=6.0.0",
    "python-dotenv>=1.2.2",
    "langfuse>=4.0.0",
    "langchain>=1.3.2",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "ruff>=0.9",
    "fpdf2>=2.8.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
markers = [
    "e2e: marks tests as end-to-end (excluded from default make test run)",
    "grp_a: Group A — native extraction",
    "grp_b: Group B — classifier accuracy",
    "grp_c: Group C — block-type extraction",
    "grp_d: Group D — schema metadata",
    "grp_e: Group E — multi-page burst",
    "grp_f: Group F — hierarchy assignment",
    "grp_g: Group G — layout / reading order",
    "grp_h: Group H — graceful degradation",
    "grp_i: Group I — full-chain integration (no LLM tier mocked)",
    "grp_r: Group R — real-document corpus",
    "integration_chain: full-chain no-mocks integration test",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import order)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (modernise syntax for Python 3.13)
]
ignore = [
    "E501",  # line too long — formatter handles length; avoid double-reporting
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]  # pytest fixture parameters look like redefinitions to static analysis

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
